chore: setup rss

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "graphql-request": "^7.1.2",
     "hono": "^4.6.13",
     "leaflet": "^1.9.4",
+    "markdown-it": "^14.1.0",
     "markdown-to-jsx": "^7.7.1",
     "open-graph-scraper": "^6.8.3",
     "query-string": "^9.1.1",
@@ -53,6 +54,7 @@
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
+    "sanitize-html": "^2.13.1",
     "schema-dts": "^1.1.2",
     "sharp": "^0.33.5",
     "swr": "^2.2.5",
