fixed the githu api issue which was causing the undef return error

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 REMOVED_SECRET
 
-GITHUB_ACCESS_TOKEN=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
+REMOVED_SECRET
 
 SPOTIFY_CLIENT_ID=ceda1665636f4d40bc02d5cf157733df
 SPOTIFY_CLIENT_SECRET=7eb0822131964c72bd260dae15f31a68
