--- a/package.json
+++ b/package.json
@@ -14,68 +14,68 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.0.2",
-    "@astrojs/node": "^9.0.0",
-    "@astrojs/partytown": "^2.1.2",
-    "@astrojs/react": "^4.1.0",
-    "@astrojs/rss": "^4.0.10",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.3",
-    "@astrojs/vercel": "^8.0.0",
-    "@hono/zod-validator": "^0.4.1",
-    "@playform/compress": "^0.1.6",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.5",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
-    "@uiw/react-heat-map": "^2.3.1",
-    "@vercel/analytics": "^1.4.1",
-    "@vercel/og": "^0.6.4",
-    "@vis.gl/react-google-maps": "^1.4.2",
-    "astro": "^5.0.5",
-    "astro-font": "^0.1.81",
+    "@astrojs/mdx": "^4.3.0",
+    "@astrojs/node": "^9.2.2",
+    "@astrojs/partytown": "^2.1.4",
+    "@astrojs/react": "^4.3.0",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.4.0",
+    "@astrojs/vercel": "^8.1.4",
+    "@hono/zod-validator": "^0.5.0",
+    "@playform/compress": "^0.1.9",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
+    "@uiw/react-heat-map": "^2.3.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/og": "^0.6.8",
+    "@vis.gl/react-google-maps": "^1.5.2",
+    "astro": "^5.8.0",
+    "astro-font": "^1.1.0",
     "astro-seo": "^0.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "framer-motion": "^11.14.1",
-    "graphql": "^16.9.0",
+    "framer-motion": "^12.12.1",
+    "graphql": "^16.11.0",
     "graphql-request": "^7.1.2",
-    "hono": "^4.6.13",
+    "hono": "^4.7.10",
     "leaflet": "^1.9.4",
     "markdown-it": "^14.1.0",
-    "markdown-to-jsx": "^7.7.1",
-    "open-graph-scraper": "^6.8.3",
-    "query-string": "^9.1.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-leaflet": "^4.2.1",
-    "react-tweet": "^3.2.1",
+    "markdown-to-jsx": "^7.7.6",
+    "open-graph-scraper": "^6.10.0",
+    "query-string": "^9.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
+    "react-tweet": "^3.2.2",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
-    "sanitize-html": "^2.13.1",
-    "schema-dts": "^1.1.2",
-    "sharp": "^0.33.5",
-    "swr": "^2.2.5",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^3.4.16",
+    "sanitize-html": "^2.17.0",
+    "schema-dts": "^1.1.5",
+    "sharp": "^0.34.2",
+    "swr": "^2.3.3",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.7.2"
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/leaflet": "^1.9.15",
-    "@typescript-eslint/parser": "^8.18.0",
-    "eslint": "^9.16.0",
+    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/leaflet": "^1.9.18",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.27.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-mdx": "^3.1.5",
+    "eslint-plugin-mdx": "^3.4.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "prettier-config-standard": "^7.0.0",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.9"
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^3.4.17"
   }
 }
