--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ pnpm-debug.log*
 # environment variables
 .env
 .env.production
+.env.example
 
 # macOS-specific files
 .DS_Store
@@ -27,3 +28,6 @@ pnpm-debug.log*
 
 
 .env*
+
+# Local Netlify folder
+.netlify
