--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.3.0",
+    "@astrojs/netlify": "^6.3.4",
     "@astrojs/node": "^9.2.2",
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/react": "^4.3.0",
