updated astro.config.mjs serverless

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
       "@/*": ["./src/*"],
       "@icons/*": ["./src/components/icons/*"]
     },
-    "types": ["astro/client"]  // <--- Add this line
+    // <--- Add this line
   }
 }
